objects/Demoreport_Model_Attach__c.object
<CustomObject>
    <description>デモレポートで使用されている機種・アタッチ情報</description>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continent__c</fullName>
        <formula>demoreport_no__r.Continent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Continent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>text(demoreport_no__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalKey__c</fullName>
        <externalId>true</externalId>
        <label>ExternalKey</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY__c</fullName>
        <formula>demoreport_no__r.FY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Attachment__c</fullName>
        <label>Model/Attachment</label>
        <picklist>
            <picklistValues>
                <fullName>Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attachment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model_Report_Excluded__c</fullName>
        <formula>if( S_Model__c = &apos;JED-2300&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model_Report_Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Text__c</fullName>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model（参照関係）</label>
        <referenceTo>Model__c</referenceTo>
        <relationshipName>Demo_Report_Model_Attachment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <formula>demoreport_no__r.Quarter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEQ__c</fullName>
        <label>SEQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Model__c</fullName>
        <label>S_Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SampleClassification__c</fullName>
        <formula>text(demoreport_no__r.SampleClassification__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SampleClassification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeofDemo__c</fullName>
        <formula>text(demoreport_no__r.TypeofDemo__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TypeofDemo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeofIndustry__c</fullName>
        <formula>text(demoreport_no__r.TypeofIndustry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TypeofIndustry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>demoreport_no__c</fullName>
        <label>Demo_Report_No</label>
        <referenceTo>DemoReport__c</referenceTo>
        <relationshipName>demoreport_b7aE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Demo Report(M/A)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>demoreport_no__c</columns>
        <columns>NAME</columns>
        <columns>Model_Attachment__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Model_Text__c</columns>
        <columns>S_Model__c</columns>
        <columns>Attachment__c</columns>
        <columns>ExternalKey__c</columns>
        <columns>SEQ__c</columns>
        <filterScope>Everything</filterScope>
        <label>_Select All</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>No</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>